News
====

Pyclewn 2.3
-----------

.. December 5, 2015

New feature
^^^^^^^^^^^

* A dynamic watch variable, for example an STL container, is now displayed
  using the enabled gdb pretty printers.

Bug fixes
^^^^^^^^^

* Issue #41: Fix the 'define', 'commands' and 'document' gdb commands
  (regression).

* Issue #42: The 'python' gdb command can also be used now as a multi-line
  command.

* Issue #43: The 'shell' gdb command is an illegal command as already stated
  in the documentation.

Pyclewn 2.2
-----------

.. November 28, 2015

Bug fixes
^^^^^^^^^

* Issue #25: Print the return value when the inferior stops after 'finish'.

* Issue #26: Fix Pyclewn failure to start when gdb is configured with
  ``enable-targets=all``.

* Issue #27: File name completion is now available before gdb has been
  started. This fixes a regression introduced in 2.1 by the full gdb
  completion feature.

* Issue #31: Hitting <CR> in the breakpoints window now splits the first
  window of the current tab loaded with a non-clewn buffer.

* Issue #39: Prevent pip using wheel to install pyclewn on Python 2.7.

Pyclewn 2.1
-----------

.. April 3, 2015

New features
^^^^^^^^^^^^

* Full gdb completion is now available on Vim command line. See
  ``:help gdb-completion``.

* The console and the Pyclewn buffers are loaded in windows of a dedicated tab
  page when the ``--window`` option is set to ``usetab``. See
  ``help pyclewn-usetab``.

* The new command ``Cexitclewn`` closes the debugging session and removes the
  Pyclewn buffers and their windows (issue #20).

* Two new key mappings are available in the breakpoints window. Use ``+`` to
  toggle the breakpoint state between enable/disable, and use ``<C-K>`` to
  delete the breakpoint.

* The new vim.ping() function may be used to check whether an existing Python
  process may be attached to.

Changes
^^^^^^^

* Many improvements to the handling of the Pyclewn windows (issue #17).
